cristina info update

--- a/_data/members.yml
+++ b/_data/members.yml
@@ -108,5 +108,7 @@
   socials:
     - link: mailto:alfanoce@mcmaster.ca
       icon: envelope
+    - link: https://www.linkedin.com/in/cristinaalfano
+      icon: linkedin
   desc: 
-    Aspiring Engineer
+    I love alt rock, weird fruits, colouring books, and hiking for an amazing view.
