new members yml

--- a/_data/members.yml
+++ b/_data/members.yml
@@ -1,114 +1,118 @@
-- avatar: images/members/Cece.jpg
-  name: Cece Varrasso
+- avatar: images/members_final/Aditya.jpg
+  name: Aditya Thakkar
   position: President
   socials:
-    - link: mailto:varrasce@mcmaster.ca
+    - link: mailto:thakkaap@mcmaster.ca
       icon: envelope
-    - link: https://ca.linkedin.com/in/ceceliavarrasso
+    - link: https://ca.linkedin.com/in/aditya-thakkar-203087a4
       icon: linkedin
   desc:
-    I love pizza and origami!
-- avatar: images/members/Marina.jpg
-  name: Marina Bockaj
+    I'm a huge guitar nerd, obsessed with Game of Thrones and love the BEAMS family!
+- avatar: images/members_final/Liane.jpg
+  name: Liane Ladouceur
   position: VP External
-  socials:
-    - link: mailto:bockajm@mcmaster.ca
-      icon: envelope
-  desc:
-    Currently work in medical device research, play basketball, like netflix and looove chilling.
-- avatar: images/members/Marie.jpg
-  name: Marie Price
-  position: VP Internal
-  socials:
-    - link: mailto:pricemr@mcmaster.ca
-      icon: envelope
-  desc: 
-    I love coffee, good food and naps!!!
-- avatar: images/members/Kushal.jpg
-  name: Kushal Panchal
-  position: VP Productions
-  socials:
-    - link: mailto:panchk2@mcmaster.ca
-      icon: envelope
-    - link: http://kushalpanchal.me/
-      icon: laptop
-  desc: 
-    Huge graphic designer enthusiast, intrigued programmer, and aspiring engineer. 
-- avatar: images/members/Katelyn.jpg
-  name: Katelyn Chan
-  position: VP Social
-  socials:
-    - link: mailto:chank8@mcmaster.ca
-      icon: envelope
-  desc: 
-    A huge superhero nerd and Batman fangirl!
-- avatar: images/members/Uma.jpg
-  name: Umatheny Umatheva
-  position: VP Finanace
-  socials:
-    - link: mailto:umatheu@mcmaster.ca
-      icon: envelope
-  desc: 
-    A straight shooter with a love for food.
-- avatar: images/members/Angus.jpg
-  name: Angus Lam 
-  position: Intramural Sports Representative
-  socials:
-    - link: mailto:lama7@mcmaster.ca
-      icon: envelope
-  desc: 
-     You either find me in the lab, gym or playing basketball.
-- avatar: images/members/Katya.jpg
-  name: Katya D'Costa
-  position: VP Administration  
-  socials:
-    - link: mailto:dcostaka@mcmaster.ca
-      icon: envelope
-    - link: https://ca.linkedin.com/in/katyadcosta
-      icon: linkedin
-  desc: 
-     Notorious for bad jokes, serious case of wanderlust and a major sugar addiction, aspires to be a mad scientist!!
-- avatar: images/members/Liane.jpg
-  name: Liane Elizabeth 
-  position: Committee Member
   socials:
     - link: mailto:ladoucl@mcmaster.ca
       icon: envelope
     - link: https://ca.linkedin.com/in/liane-ladouceur-0140082a
       icon: linkedin
-  desc: 
-    I'm a neuroscience nerd who is always ready for a new adventure
-- avatar: images/members/Aditya.jpg
-  name: Aditya Thakkar
-  position: Second Year BioMed Representative
+  desc:
+    Passionate about improving the healthcare system. Always happy to chat about all things biomedical!
+- avatar: images/members_final/E2.jpg
+  name: E2
+  position: VP External
   socials:
-    - link: mailto:thakkaap@mcmaster.ca
+    - link: mailto:hsiaoy@mcmaster.ca 
       icon: envelope
   desc: 
-    Aspiring engineer
-- avatar: images/members/Jacob.jpg
+    Piano player and Java enthusiast "coffee"
+- avatar: images/members_final/Jessica.jpg
+  name: Jessica Trac
+  position: VP Internal
+  socials:
+    - link: mailto:tracj2@mcmaster.ca
+      icon: envelope
+    - link: https://ca.linkedin.com/in/jessica-trac-41bb84b6
+      icon: linkedin
+  desc: 
+    Hello! I love being creative, and specifically I love to draw! I've spent days sitting around campus drawing McMaster buildings!
+- avatar: images/members_final/Darren.jpg
+  name: Darren Chang	
+  position: Web Architect
+  socials:
+    - link: mailto:changd@mcmaster.ca
+      icon: envelope
+  desc: 
+    Computer and tech enthusiast! I enjoy designing graphics in photoshop and building computers!
+- avatar: images/members_final/Mark.jpg
+  name: Mark Suan
+  position: VP Social
+  socials:
+    - link: mailto:suanmx@mcmaster.ca 
+      icon: envelope
+  desc: 
+    I look forward to a great year with all of you!	
+- avatar: images/members_final/Milos.jpg
+  name: Milos Bijelic
+  position: VP Productions
+  socials:
+    - link: mailto:bijelm3@mcmaster.ca 
+      icon: envelope
+  desc: 
+    My interests include PCB design, autonomous robotics, wearable technology and mathematical modelling.	
+- avatar: images/members_final/Ian.jpg
+  name: Ian Gough
+  position: Sports Representative
+  socials:
+    - link: mailto:umatheu@mcmaster.ca
+      icon: envelope
+  desc: 
+    4th year student who loves ultimate frisbee. I balance ultimate with researching ways to produce viruses, and school work.
+- avatar: images/members_final/Jacob.jpg
   name: Jacob Barclay
-  position: Chemical Engineering Representative
+  position: VP Finance
   socials:
-    - link: mailto:barclajr@mcmaster.ca
+    - link: mailto:barclajr@mcmaster.ca 
       icon: envelope
   desc: 
-    Aspiring engineer
-- avatar: images/members/Prasann.jpg
-  name: Prasann Pandya
-  position: Electrical Engineering Representative
+     I love classic rock and tacos.
+- avatar: images/members_final/Sophie.jpg
+  name: Sophie Emerson
+  position: Chemical Engineering Representative  
   socials:
-    - link: mailto:pandyp@mcmaster.ca
+    - link: mailto:emersosc@mcmaster.ca
       icon: envelope
   desc: 
-    Aspiring Engineer
-# - avatar: images/members/photo-1.jpg
-#   name: Cristina Alfano
-#   position: MES Representative
-#   socials:
-#     - link: mailto:alfanoce@mcmaster.ca
-#       icon: envelope
-#     - link: https://www.linkedin.com/in/cristinaalfano
-#       icon: linkedin
-#   desc: 
-#     I love alt rock, weird fruits, colouring books, and hiking for an amazing view.
+    Big fan of doing research, listening to music, and making bad jokes!
+- avatar: images/members_final/Lauren.jpg
+  name: Lauren Liu
+  position: 2nd Year Representative
+  socials:
+    - link: mailto:beams@macengsociety.ca
+      icon: envelope
+  desc: 
+    Lives in a onesie.
+- avatar: images/members_final/Husain.jpg
+  name: Husain Tapia
+  position: 2nd Year Representative
+  socials:
+    - link: mailto:beams@macengsociety.ca
+      icon: envelope
+  desc: 
+    Foodie, hobbies photographer and serial binge-watcher of TV shows! That's me in a nutshell.
+- avatar: images/members_final/George.jpg
+  name: George Padeigis
+  position: 2nd Year Representative
+  socials:
+    - link: mailto:beams@macengsociety.ca
+      icon: envelope
+  desc: 
+    I’m passionate, hardworking, and determined. I really care for people, I love solving difficult problems, and I love dreaming about the future.
+- avatar: images/members_final/Ana.jpg
+  name: Ana Arezina
+  position: 2nd Year Representative
+  socials:
+    - link: mailto:beams@macengsociety.ca
+      icon: envelope
+  desc: 
+    I am an aspiring engineer in my second year of Engineering. In my free time I enjoy meeting new people and spending time outdoors.
