--- a/_data/members.yml
+++ b/_data/members.yml
@@ -42,6 +42,8 @@
   socials:
     - link: mailto:changd@mcmaster.ca
       icon: envelope
+    - link: https://www.linkedin.com/in/darren-tj-chang
+      icon: linkedin    
   desc: 
     Computer and tech enthusiast! I enjoy designing graphics in photoshop and building computers!
 - avatar: images/members_final/Mark.jpg
